# priority-calculator

./: README.md  pyproject.toml
src/priority_calculator/: __main__.py  main.py
